--- a/.github/workflows/allure-report.yml
+++ b/.github/workflows/allure-report.yml
@@ -32,9 +32,11 @@ jobs:
         run: mvn clean test
 
       - name: Generate Allure Report
+        if: always()
         run: mvn allure:report
 
       - name: Upload Allure Report as Artifact
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: allure-report
