--- a/.github/workflows/allure-report.yml
+++ b/.github/workflows/allure-report.yml
@@ -45,6 +45,7 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    if: always()
 
     steps:
       - name: Download Allure Report Artifact
