--- a/.github/workflows/allure-report.yml
+++ b/.github/workflows/allure-report.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '17'  # or 11, depending on your project
+          java-version: '17'
 
       - name: Cache Maven packages
         uses: actions/cache@v3
