--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -38,7 +38,7 @@ jobs:
           gh_pages: master
           allure_history: allure-history
           allure_report: allure-report
-          allure_results: target/allure-results
+          allure_results: allure-results
 
       - name: Publish test report
         if: always()
