--- a/pom.xml
+++ b/pom.xml
@@ -12,21 +12,21 @@
         <maven.compiler.release>17</maven.compiler.release>
 <!--        <maven.compiler.source>1.8</maven.compiler.source>-->
 <!--        <maven.compiler.target>1.8</maven.compiler.target>-->
-        <allure.version>2.25.0</allure.version>
+<!--        <allure.version>2.27.0</allure.version>-->
         <aspectj.version>1.9.22.1</aspectj.version>
     </properties>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>io.qameta.allure</groupId>
-                <artifactId>allure-bom</artifactId>
-                <version>${allure.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+<!--    <dependencyManagement>-->
+<!--        <dependencies>-->
+<!--            <dependency>-->
+<!--                <groupId>io.qameta.allure</groupId>-->
+<!--                <artifactId>allure-bom</artifactId>-->
+<!--                <version>${allure.version}</version>-->
+<!--                <type>pom</type>-->
+<!--                <scope>import</scope>-->
+<!--            </dependency>-->
+<!--        </dependencies>-->
+<!--    </dependencyManagement>-->
 
     <build>
         <plugins>
@@ -45,7 +45,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>3.1.2</version>
                 <configuration>
                     <properties>
                         <configurationParameters>
@@ -54,6 +54,9 @@
                             junit.jupiter.execution.parallel.config.strategy = fixed
                             junit.jupiter.execution.parallel.config.fixed.parallelism = 2
                         </configurationParameters>
+                        <systemPropertyVariables>
+                            <allure.results.directory>allure-results</allure.results.directory>
+                        </systemPropertyVariables>
                     </properties>
                 </configuration>
             </plugin>
@@ -150,6 +153,7 @@
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-junit5</artifactId>
+            <version>2.27.0</version>
             <scope>test</scope>
         </dependency>
 
