--- a/.github/workflows/allure-report.yml
+++ b/.github/workflows/allure-report.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
+  test-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,13 +19,26 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Build and Run Tests
-        run: mvn clean test || true
+      - name: Run Tests
+        run: mvn clean test
+
+      - name: Show Test Output
+        run: |
+          echo "Contents of target/"
+          ls -la target
+          echo "Contents of target/allure-results/"
+          ls -la target/allure-results || echo "No allure-results found"
 
       - name: Generate Allure Report
-        run: mvn allure:report
+        if: success() || failure()
+        run: |
+          if [ -d target/allure-results ]; then
+            mvn allure:report
+          else
+            echo "Skipping report generation: no allure-results."
+          fi
 
-      - name: Copy Report to Output Folder
+      - name: Prepare for GitHub Pages
         run: |
           mkdir -p public
           cp -r target/site/allure-maven-plugin/* public/
