--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <maven.compiler.release>17</maven.compiler.release>
 <!--        <maven.compiler.source>1.8</maven.compiler.source>-->
 <!--        <maven.compiler.target>1.8</maven.compiler.target>-->
-<!--        <allure.version>2.27.0</allure.version>-->
+        <allure.version>2.27.0</allure.version>
         <aspectj.version>1.9.22.1</aspectj.version>
     </properties>
 
@@ -45,8 +45,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.1.2</version>
+                <version>2.22.2</version>
                 <configuration>
+                    <argLine>-Dallure.results.directory=target/allure-results</argLine>
                     <properties>
                         <configurationParameters>
                             junit.jupiter.execution.parallel.enabled = true
@@ -54,9 +55,10 @@
                             junit.jupiter.execution.parallel.config.strategy = fixed
                             junit.jupiter.execution.parallel.config.fixed.parallelism = 2
                         </configurationParameters>
-                        <systemPropertyVariables>
-                            <allure.results.directory>target/allure-results</allure.results.directory>
-                        </systemPropertyVariables>
+<!--                        <systemPropertyVariables>-->
+<!--&lt;!&ndash;                            <allure.results.directory>target/allure-results</allure.results.directory>&ndash;&gt;-->
+<!--                            <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>-->
+<!--                        </systemPropertyVariables>-->
                     </properties>
                 </configuration>
             </plugin>
@@ -153,7 +155,7 @@
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-junit5</artifactId>
-            <version>2.27.0</version>
+            <version>${allure.version}</version>
             <scope>test</scope>
         </dependency>
 
