--- a/pom.xml
+++ b/pom.xml
@@ -12,21 +12,21 @@
         <maven.compiler.release>17</maven.compiler.release>
 <!--        <maven.compiler.source>1.8</maven.compiler.source>-->
 <!--        <maven.compiler.target>1.8</maven.compiler.target>-->
-        <allure.version>2.27.0</allure.version>
+        <allure.version>2.25.0</allure.version>
         <aspectj.version>1.9.22.1</aspectj.version>
     </properties>
 
-<!--    <dependencyManagement>-->
-<!--        <dependencies>-->
-<!--            <dependency>-->
-<!--                <groupId>io.qameta.allure</groupId>-->
-<!--                <artifactId>allure-bom</artifactId>-->
-<!--                <version>${allure.version}</version>-->
-<!--                <type>pom</type>-->
-<!--                <scope>import</scope>-->
-<!--            </dependency>-->
-<!--        </dependencies>-->
-<!--    </dependencyManagement>-->
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-bom</artifactId>
+                <version>${allure.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
@@ -40,6 +40,10 @@
                 <groupId>io.qameta.allure</groupId>
                 <artifactId>allure-maven</artifactId>
                 <version>2.11.2</version>
+                <configuration>
+                    <reportVersion>${allure.version}</reportVersion>
+                    <resultsDirectory>${project.build.directory}/allure-results</resultsDirectory>
+                </configuration>
             </plugin>
 
             <plugin>
@@ -47,7 +51,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
-                    <argLine>-Dallure.results.directory=target/allure-results</argLine>
+<!--                    <argLine>-Dallure.results.directory=target/allure-results</argLine>-->
                     <properties>
                         <configurationParameters>
                             junit.jupiter.execution.parallel.enabled = true
