--- a/.github/workflows/allure-report.yml
+++ b/.github/workflows/allure-report.yml
@@ -47,4 +47,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
+          publish_branch: main
+          publish_dir: allure-history
