--- a/.github/workflows/allure-report.yml
+++ b/.github/workflows/allure-report.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
+          distribution: 'corretto'
           java-version: '17'
 
       - name: Run Tests
