added logging condition for workflow

--- a/.github/workflows/allure-report.yml
+++ b/.github/workflows/allure-report.yml
@@ -23,6 +23,7 @@ jobs:
         run: mvn clean test
 
       - name: Show Test Output
+        if: always()
         run: |
           echo "Contents of target/"
           ls -la target
