--- a/.github/workflows/allure-report.yml
+++ b/.github/workflows/allure-report.yml
@@ -40,6 +40,7 @@ jobs:
           fi
 
       - name: Deploy to GitHub Pages
+        if: success() || failure()
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
